--- a/FramePlayerNative/source/android/CMakeLists.txt
+++ b/FramePlayerNative/source/android/CMakeLists.txt
@@ -8,6 +8,6 @@ file(GLOB_RECURSE srcs *.h *.c *.cpp)
 
 target_sources(${target} PRIVATE ${srcs})
 set_target_properties(${target} PROPERTIES CXX_STANDARD 17)
-target_include_directories(${target} PUBLIC ${CMAKE_CURRENT_LIST_DIR})
+#include_directories(PUBLIC ${CMAKE_CURRENT_LIST_DIR})
 
-target_link_libraries(${target} PUBLIC android)
+target_link_libraries(${target} PUBLIC android fpn_log)
