--- a/FramePlayerNative/source/main/CMakeLists.txt
+++ b/FramePlayerNative/source/main/CMakeLists.txt
@@ -6,6 +6,6 @@ add_library(${target} SHARED "")
 file(GLOB_RECURSE srcs *.h *.c *.cpp)
 target_sources(${target} PRIVATE ${srcs})
 set_target_properties(${target} PROPERTIES CXX_STANDARD 17)
-target_include_directories(${target} PUBLIC ${CMAKE_CURRENT_LIST_DIR})
+#include_directories(PUBLIC ${CMAKE_CURRENT_LIST_DIR})
 
-target_link_libraries(${target} PUBLIC fpn_android fpn_log)
+target_link_libraries(${target} PUBLIC fpn_android fpn_log EGL GLESv3)
