show gif success

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,28 @@
         "__tree": "cpp",
         "memory_resource": "cpp",
         "functional": "cpp",
-        "__mutex_base": "cpp"
+        "__mutex_base": "cpp",
+        "__locale": "cpp",
+        "iosfwd": "cpp",
+        "cstddef": "cpp",
+        "chrono": "cpp",
+        "format": "cpp",
+        "queue": "cpp",
+        "array": "cpp",
+        "bitset": "cpp",
+        "deque": "cpp",
+        "initializer_list": "cpp",
+        "list": "cpp",
+        "type_traits": "cpp",
+        "xhash": "cpp",
+        "xstring": "cpp",
+        "xtree": "cpp",
+        "xutility": "cpp",
+        "__hash_table": "cpp",
+        "__split_buffer": "cpp",
+        "iterator": "cpp",
+        "map": "cpp",
+        "xiosbase": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
