--- a/FramePlayerNative/source/CMakeLists.txt
+++ b/FramePlayerNative/source/CMakeLists.txt
@@ -15,8 +15,10 @@ if(TARGET_OS_ANDROID)
     add_subdirectory(android)
 endif()
 if(BUILD_FPN_EXTRA)
+    add_definitions(-DFPN_USE_EXTRA_RENDER=1)
     add_subdirectory(extra/render)
-#    add_subdirectory(extra/producer)
+    add_definitions(-DFPN_USE_EXTRA_PRODUCER=1)
+    add_subdirectory(extra/producer)
 endif()
 
 add_subdirectory(main)
