build fpn as library

--- a/FramePlayerNative/CMakeLists.txt
+++ b/FramePlayerNative/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/install CACHE PATH "Installation Di
 include(${${PRODUCT}_ROOT}/cmake/common.cmake)
 message("CMake Created: RootDir is" ${${PRODUCT}_ROOT})
 
+option(BUILD_FPN_LIBRARY "Build fpn as a library" OFF)
 option(BUILD_FPN_EXTRA "Build fpn extra capabilities" OFF)
 option(BUILD_FPN_ENABLE_OPENGL_API "Build fpn opengl capabilities" ON)
 
