--- a/FramePlayerNative/source/CMakeLists.txt
+++ b/FramePlayerNative/source/CMakeLists.txt
@@ -10,14 +10,21 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-rtti")
 
 include_directories(PUBLIC ${SOURCE_ROOT_DIR})
 
+if(BUILD_FPN_LIBRARY)
+add_definitions(-DFPN_USE_AS_LIBRARY=1)
+endif()
+
 if(BUILD_FPN_ENABLE_OPENGL_API)
     add_definitions(-DFPN_USE_OPENGL_API=1)
 endif()
 
 add_subdirectory(log)
+if (NOT BUILD_FPN_LIBRARY)
 if(TARGET_OS_ANDROID)
     add_subdirectory(android)
 endif()
+endif()
+
 if(BUILD_FPN_EXTRA)
     add_definitions(-DFPN_USE_EXTRA_RENDER=1)
     add_subdirectory(extra/render)
