--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FramePlayer"
-        tools:targetApi="31" >
-        <activity android:name=".TestFramePlayer"
+        tools:targetApi="31">
+        
+        <!-- 主Activity -->
+        <activity 
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <!-- TestFramePlayer Activity -->
+        <activity 
+            android:name=".TestFramePlayer"
+            android:exported="false"/>
     </application>
 </manifest>
