--- a/FramePlayerNative/source/CMakeLists.txt
+++ b/FramePlayerNative/source/CMakeLists.txt
@@ -8,8 +8,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections -fvi
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -fno-rtti")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-rtti")
 
-include_directories(PUBLIC ${SOURCE_ROOT_DIR})
-
 if(BUILD_FPN_LIBRARY)
 add_definitions(-DFPN_USE_AS_LIBRARY=1)
 endif()
@@ -17,6 +15,18 @@ endif()
 if(BUILD_FPN_ENABLE_OPENGL_API)
     add_definitions(-DFPN_USE_OPENGL_API=1)
 endif()
+
+if(BUILD_FPN_EXTRA)
+    add_definitions(-DFPN_USE_EXTRA_RENDER=1)
+    add_definitions(-DFPN_USE_EXTRA_PRODUCER=1)
+endif()
+
+if (CMAKE_BUILD_TYPE AND ${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+    add_definitions(-DFPN_DEBUG=1)
+endif()
+
+
+include_directories(PUBLIC ${SOURCE_ROOT_DIR})
 
 add_subdirectory(log)
 if (NOT BUILD_FPN_LIBRARY)
@@ -26,9 +36,7 @@ endif()
 endif()
 
 if(BUILD_FPN_EXTRA)
-    add_definitions(-DFPN_USE_EXTRA_RENDER=1)
     add_subdirectory(extra/render)
-    add_definitions(-DFPN_USE_EXTRA_PRODUCER=1)
     add_subdirectory(extra/producer)
 endif()
 
