--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FramePlayer"
         tools:targetApi="31">
+        <profileable android:shell="true" />
         
         <!-- 主Activity -->
         <activity 
